@@ -39,8 +39,9 @@
 	.ctinfo		{font-size:18px; line-height:1.4em; color:#E8F6FF;}
 	.ctinfo.top	{padding-top:10px;}
 	
-	.cteg		{width:100%; background-color:rgba(1,1,1,0.6); padding:50px 0 100px 0;}
-	.ctegwrap	{font-size:18px; color:#fff; padding:60px 0 10px 0; margin-bottom:40px;}
+	.cteg		{width:100%; background-color:rgba(37,32,14,0.8); padding:50px 0 100px 0;}
+	.ctegwrap	{font-size:1.4em; color:#fff; line-height:1.4em; word-spacing:0.07em; padding:60px 0 10px 0; margin-bottom:40px;}
+	.ctegwrap p	{padding:10px 0;}
 	.cteghead	{font-weight:bold; font-size:38px;}
 	.ctegcol	{display:inline-block; vertical-align:top; width:320px; max-width:320px;}
 	.ctegflag	{width:280px; max-width:280px; height:200px; max-height:200px; overflow:hidden; position:relative;}
@@ -129,44 +130,19 @@
 		</div>
 	</div>
 </div>
-<span id="examples"></span>
+<span id="more"></span>
 <div class="cteg">
 	<div class="defcon">
 		<div class="ctegwrap">
-			<span class="cteghead">examples:</span>
-			<p>We've selected 3 countries as examples of how D-Portal displays IATI data in the browser. Please click to view.</p>
+			<span class="cteghead">What is it?</span>
+			<p><span class="bold">D-Portal</span> is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
+			<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
+			<p>In its first iteration the platform poses two questions: where do resources come from, and where do they go (by sector and location)? Recent , current and future data is presented and compared across data sources.</p>
+			<p>In order to answer these questions from a country perspective it is insufficient merely to display available data: it is equally important to plot the gaps in the information. Coping with poor quality or missing data is an essential part of the information interface.
+			<p><span class="bold">D-Portal</span>is an open source platform. While it provides a generic deployment for any country it has been developed with the specific intention of being customised in-country to meet local needs. A prototype local application for Nepal is currently being developed in parallel to the core engine.</p>
+			<p><span class="bold">D-Portal</span> has been jointly funded by IATI and Development Initiatives (DI). IATI is keen to promote the access to IATI-formatted data at country level. DI is committed to improving access to information by implementing joined-up data solutions.</p>
 		</div>
-		<div class="ctegcol">
-			<a href="/html/bangladesh" class="eg" title="What's going on in Bangladesh?">
-				<div class="ctegflag">
-					<img src="/art/bdflag.280.png" alt="Bangladesh flag" height="180"/>
-				</div>
-				<div class="ctegname">BANGLADESH</div>
-			</a>
-			<a href="/html/bangladesh/#view=donors" class="money">Where's the money: Donors</a>
-			<a href="/html/bangladesh/#view=sectors" class="money">Where's the money: Sectors</a>
-			<a href="/html/bangladesh/#view=districts" class="money">Where's the money: Geography</a>
-		</div><div class="ctegcol">
-			<a href="/html/honduras" class="eg" title="What's going on in Honduras?">
-				<div class="ctegflag">
-					<img src="/art/hnflag.280.png" alt="Honduras flag" height="180"/>
-				</div>
-				<div class="ctegname">HONDURAS</div>
-			</a>
-			<a href="/html/honduras/#view=donors" class="money">Where's the money: Donors</a>
-			<a href="/html/honduras/#view=sectors" class="money">Where's the money: Sectors</a>
-			<a href="/html/honduras/#view=districts" class="money">Where's the money: Geography</a>
-		</div><div class="ctegcol">
-			<a href="/html/uganda" class="eg" title="What's going on in Uganda?">
-				<div class="ctegflag">
-					<img src="/art/ugflag.280.png" alt="Uganda flag" height="180"/>
-				</div>
-				<div class="ctegname">UGANDA</div>
-			</a>
-			<a href="/html/uganda/#view=donors" class="money">Where's the money: Donors</a>
-			<a href="/html/uganda/#view=sectors" class="money">Where's the money: Sectors</a>
-			<a href="/html/uganda/#view=districts" class="money">Where's the money: Geography</a>
-		</div>
+		
 	</div>
 </div>
 <span id="sav"></span>
