@@ -1,6 +1,7 @@
 Development Portal (2014-03-26 shi)
 ==============================
 Remaining 34 background images uploaded
+Added first version of description on about / landing page
 
 
 Development Portal (2014-03-25 shi)
